--- a/index.html
+++ b/index.html
@@ -1,19 +1,38 @@
 <div id="root">
     <script src="https://unpkg.com/react@16.0.0/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.production.min.js"></script>
-    <script type="text/javascript">
+    <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
+    <script type="text/babel">
       const rootElement = document.getElementById('root')
       // const element = document.createElement('div')
       // element.textContent = 'Hello World'
       // element.className = 'container'
       // rootElement.appendChild(element)
 
-      const element = React.createElement(
-        'div', 
-        {className: 'container',
-         children: 'Hello World',
-        })
-        console.log(element)
-        ReactDOM.render(element, rootElement)
+    //  'Hello World' with React API
+    //   const element = React.createElement(
+    //     'div', 
+    //     {className: 'container',
+    //      children: 'Hello World',
+    //     })
+    //     console.log(element)
+
+    // JSX
+        const content = 'Hello World'
+        const myClassName = 'container'
+        const props = {
+            className: 'container',
+            children: 'Hello World',
+        }
+        
+        // const element = <div {...props} />
+
+        // Override existing className
+        // const element = <div {...props} className="my-class" />
+
+        // Overriding regular children
+        const element = <div {...props} className="my-class" >Hi there</div>
+
+    ReactDOM.render(element, rootElement)
     </script>
 </div>
