--- a/The Beginner's Guide to React/index.html
+++ b/The Beginner's Guide to React/index.html
@@ -12,18 +12,25 @@
 
   <div id="root"></div>
 
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+
   <script type="text/javascript">
 
     const rootElement = document.getElementById('root');
 
-    const element = document.createElement('div');
+    const element = React.createElement(
+      'div',
+      {
+        className: 'container',
+        children: ['Hello World', 'hi there!']
+      },
+      'children override!'
+    );
 
-    element.textContent = "Hello World";
+    console.log(element);
 
-    element.className = 'container';
-
-    rootElement.appendChild(element);
-
+    ReactDOM.render(element, rootElement);
 
   </script>
 
