--- a/The Beginner's Guide to React/index.html
+++ b/The Beginner's Guide to React/index.html
@@ -22,14 +22,18 @@
 
     const rootElement = document.getElementById('root');
 
-    const message = (props) => <div>{props.msg}</div>;
+    const Message = (props) => <div>{props.msg}</div>;
 
     const element = (
       <div className="container">
 
-        {React.createElement(message, {msg: 'Hello World'})}
-        
-        {message({msg: 'Hi there'})}
+       <Message msg="Hello World" />
+
+       {Message({children: 'JavaScript Way!!'})}
+
+       {React.createElement(Message, {msg: 'Passing function with arguments to create an element'})}
+
+       <Message msg={'GoodBye World'}>This text won't render</Message>
     
       </div>
     )
