--- a/The Beginner's Guide to React/index.html
+++ b/The Beginner's Guide to React/index.html
@@ -22,18 +22,18 @@
 
     const rootElement = document.getElementById('root');
 
-    const Message = (props) => <div>{props.msg}</div>;
+    const Message = (props) => <div>{props.children}</div>;
 
     const element = (
       <div className="container">
 
-       <Message msg="Hello World" />
+       <Message children="Hello World" />
 
        {Message({children: 'JavaScript Way!!'})}
 
-       {React.createElement(Message, {msg: 'Passing function with arguments to create an element'})}
+       {React.createElement(Message, {children: 'Passing function with arguments to create an element'})}
 
-       <Message msg={'GoodBye World'}>This text won't render</Message>
+       <Message children={'This will now going to be overriden by the next child argument'}>That's why assigning children as an prop to the object helps</Message>
     
       </div>
     )
