--- a/The Beginner's Guide to React/index.html
+++ b/The Beginner's Guide to React/index.html
@@ -14,6 +14,8 @@
 
   <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/prop-types@15.6.1/prop-types.js"></script>
+
 
   <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
 
@@ -22,28 +24,25 @@
 
     const rootElement = document.getElementById('root');
 
-    function SayHello(props) {
-      return (
-        <div>
-          Hello {props.firstName} {props.lastName}!
-        </div>
-      )
+    class SayHello extends React.Component {
+
+      static propTypes = {
+      firstName: PropTypes.string.isRequired,
+      lastName: PropTypes.string.isRequired
     }
 
-    const PropTypes = {
-      string(props, propName, componentName) {
-        if (typeof props[propName] !== 'string') {
-          return new Error(`Hey, you should pass a string for ${propName} in ${componentName} but you passed a type of ${typeof props[propName]}`)
-        }
+      render() {
+
+        const {firstName, lastName} = this.props;
+
+        return (
+          <div>
+            Hello {firstName} {lastName}!
+          </div>
+        )
       }
     }
-
-    SayHello.propTypes = {
-      firstName: PropTypes.string,
-      lastName: PropTypes.string
-
-    }
-
+ 
     ReactDOM.render(
       <SayHello firstName={true} />,
       rootElement
